[refac] 장바구니 체크기능 checked로 기본값 변경

--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -24,7 +24,7 @@ h2.cart_title {
   font-size: 15px;
   display: flex;
   flex-direction: row;
-  align-self: cen;
+  align-self: center;
 }
 
 .select_menu > label {
