--- a/client/css/page_productDetail_my.css
+++ b/client/css/page_productDetail_my.css
@@ -5,17 +5,6 @@ body {
 
 /* --------------------모달창--------------------*/
 .modal_cart::before{
-  /* content: "";
-  top: -27px;
-  right: 28px;
-  border-top: 15px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 15px solid #C4C4C4;
-  border-left: 10px solid transparent;
-  /* background-color: yellow; */
-
-  /* position:absolute;
-  z-index: 101;  */
   border-color: white transparent;
   border-style: solid;
   border-width: 0 10px 17px 10px;
@@ -47,8 +36,8 @@ body {
   font-size: 12.003px;
   line-height: 150%;
   width: 144px;
-  background-color: lightblue;
   text-align:left;
+  /* background-color: lightblue; */
 }
 
 .modal_text {
@@ -58,7 +47,7 @@ body {
   width: 144px;
   color: #333333;
   text-align: left;
-  background-color: lightgreen;
+  /* background-color: lightgreen; */
 }
 
 .modal_cart {
@@ -66,12 +55,10 @@ body {
   border: 1px solid #C4C4C4;
   padding: 20px;
   width: 254px;
-
   display: flex;
   gap: 24px;
   justify-content: center;
   text-align: center;
-  /* position: relative; */
   position: absolute;
   top: 65px;
   right: -23px;
@@ -90,7 +77,7 @@ body {
   justify-content: space-evenly;
   text-align: center;
   gap: 8px;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 /* ----------------------------------- */
