[feat] 버튼을 누르지 못할때는 cursor모양을 default로 설정 #36

--- a/client/css/page_productDetail_my.css
+++ b/client/css/page_productDetail_my.css
@@ -272,6 +272,10 @@ body {
   /* overflow:hidden; */
 }
 
+.minus_amount img {
+  cursor: default;
+}
+
 .minus_amount, .plus_amount {
   border: 0;
   width: 30px;
