[chore] 게시판이동 화살표 이미지 활성화 여부에 따라 변경될 수 있도록 수정   #42

--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -257,7 +257,8 @@
 .bg-arrow_prev {
   width: 56px; 
   height: 56px;                   
-  background: url('../assets/icons/Icon/arrow_prev.png') center / 30px no-repeat;
+  background: url('../assets/icons/Icon/arrow_next.png') center / 30px no-repeat;
+  transform: rotate(-180deg);
   border: 1px solid #E1E1E1;
   border-radius: 4px;
   flex-direction: row;
