--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -218,6 +218,24 @@ body {
 
 
 /* cart */
+.popup_modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 99999;
+}
+.popup_modal.is-active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.scroll_lock{
+  overflow: hidden;
+}
 .add_cart {
   width: 396px;
   height: 292px;
@@ -267,9 +285,6 @@ body {
 }
 .btn_count_plus {
   background: url(../assets/icons/main/Plus.png) no-repeat;
-}
-
-.cart_total_saving {
 }
 .cart_total {
   display: flex;
