--- a/client/css/register.css
+++ b/client/css/register.css
@@ -1,8 +1,3 @@
-.input_active {
-  color: var(--purple) !important;
-  border: 1px solid var(--purple) !important;
-}
-
 .register_container {
   width: 640px;
   margin: 0 auto;
@@ -52,8 +47,12 @@
   margin-top: 0;
 }
 
-.register.add_box {
+.register.recommend, .register.event {
   margin-top: 10px;
+}
+
+.register.recommend.none, .register.event.none {
+  display: none;
 }
 
 .register form {
@@ -107,17 +106,31 @@
   width: 143px;
   height: 44px;
   margin-left: 8px;
-  color: var(--gray-none);
-  border: 1px solid var(--gray-none);
+  color: var(--purple) !important;
+  border: 1px solid var(--purple) !important;
   border-radius: 4px;
   font-size: 16px;
   font-weight: 600;
 }
 
+.register_overlap:disabled {
+  color: var(--gray-none) !important;
+  border: 1px solid var(--gray-none) !important;
+}
+
+
 .address_wrap {
   width: 333px;
   margin-left: 8px;
   float: left;
+}
+
+.address_wrap.none {
+  display: none;
+}
+
+.address_detail.none {
+  display: none;
 }
 
 .register_notice{
@@ -152,6 +165,17 @@
   height: 44px;
 }
 
+.register_validation {
+  display: none;
+}
+
+.register_validation.is_active, .register_validation.essential {
+  display:block;
+  font-size: 16px;
+  color: var(--info-error) !important;
+  padding-top: 4px;
+}
+
 .check_label {
   position: relative;
   display: flex;
@@ -168,6 +192,10 @@
 .check_common:checked + .input_checked{
   background-color: var(--purple);
   border: none;
+}
+
+.check_common:checked + .input_checked > .input_inner {
+  background-color: var(--gray-200);
 }
 
 .input_checked {
@@ -253,30 +281,53 @@
 }
 
 .terms_box:first-child {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.terms_box:first-child {
   margin-top: 0;
 }
 
-.terms_label {
+.terms_all, .terms_check {
   display: inline-block;
-
-}
-
-.terms_label img {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
 }
 
 .terms_common {
+  vertical-align: middle;
+  display: none;
+}
+
+.terms_common:checked + .terms_checkbox {
+  background-image: url("../assets/icons/Icon/checkbox_checked.png");
+}
+
+.terms_checkbox {
   display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: transparent url("../assets/icons/Icon/checkbox.png") center / 24px no-repeat;
   vertical-align: middle;
 }
 
 .terms_text {
+  margin-left: 8px;
   vertical-align: middle;
   font-size: 16px;
   font-weight: 400;
   color: var(--content);
+}
+
+.terms_text.all {
+  font-size: 21px;
+  font-weight: 600;
+}
+
+.terms_notice {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--gray-400);
+  padding: 9px 0 0 32px;
 }
 
 .terms_link{
@@ -286,11 +337,11 @@
   height: 24px;
   line-height: 26px;
 }
+
 .register_button {
   height: 134px;
   position: relative;
 }
-
 
 .register_button button {
   position: absolute;
@@ -299,6 +350,15 @@
   transform: translate(-50%, -50%);
   width: 340px;
   height: 54px;
+  color: var(--gray-none);
+  border: 1px solid var(--gray-none);
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.register_button button.is_active {
+  border: none;
   background-color: var(--purple);
-  color: var(--white);
+  color: var(--white) !important;
 }
