--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -370,8 +370,13 @@ body {
   justify-content: center;
 }
 .recent_product {
-  width: 100%;
+  width: 40px;
   height: 51px;
+}
+.recent_product a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .recent_products_prev {
